// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text bold display 1`] = `
<div
  className="css-aibj26"
  color="text"
>
  Hello
</div>
`;

exports[`Text display 1`] = `
<div
  className="css-d726wp"
  color="text"
>
  Hello
</div>
`;

exports[`Text italic display 1`] = `
<div
  className="css-1hfam3m"
  color="text"
>
  Hello
</div>
`;

exports[`Text regular display 1`] = `
<div
  className="css-11leol5"
  color="text"
>
  Hello
</div>
`;

exports[`Text uppercase display 1`] = `
<div
  className="css-165tkgl"
  color="text"
>
  Hello
</div>
`;

exports[`Text with multiple props display 1`] = `
<div
  className="css-1mkoec2"
  color="text"
>
  Hello
</div>
`;

exports[`Text with wrong props display 1`] = `
<div
  className="css-d726wp"
  color="text"
>
  Hello
</div>
`;
